# astrobiology_research

./: .gitignore  ADDITIONAL_TESTING_PLAN.md  HANDOFF.md  INSTALL_GUIDE.md  LICENSE  README.md
paper1/data/: rerun_corrected_results.json
paper1/paper/: dimensional_activation_paper.tex
paper1/scripts/: brusselator_v2.py  brusselator_v3.py  brusselator_v4.py  figure2.py  figure3.py  rerun_corrected.py
paper2/data/: paper2_pilot_n50.json  paper2_results.json  paper2_smoke_test.json  phase5b_statistics.json  phase6_analysis_summary.json
paper2/paper/: paper2_feedback_aligned_autocatalysis.tex
paper2/scripts/: phase5b_statistics.py  phase6_figures.py  run_paper2.py  selection_bias_check.py  transient_decay_check.py
paper3/data/: phase1_diagnostics_results.json  phase1_sweep_a2_results.json  phase1_sweep_a2b_results.json  phase1_sweep_a_results.json  phase1b_controls_results.json  phase2_growth_primary_checkpoint.json  phase2_growth_replication1_checkpoint.json  phase2_statistics.json  pilot1_results.json  pilot2_results.json  pilot3_results.json  pilot3b_results.json  pilot4_results.json  (+2 more)
shared/: pyproject.toml
shared/dimensional_opening/: __init__.py  activation_tracker.py  correlation_dimension.py  experiments.py  experiments_with_progress.py  network_generator.py  oscillation_filter.py  simulator.py  stoichiometry.py  validation.py  visualization.py
shared/tests/: test_activation_tracker.py  test_correlation_dimension.py  test_experiments.py  test_network_generator.py  test_oscillation_filter.py  test_simulator.py  test_stoichiometry.py  test_validation.py
(+107 files in other folders)
