[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dimensional_opening"
version = "0.1.0"
description = "Dimensional activation analysis for prebiotic chemistry"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "matplotlib>=3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "chempy>=0.8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dimensional_opening*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
